Se agrego el archivo css en sus correspondientes carpetas, se edito el archivo html y se agrego estilo al mismo

--- a/views/home.html
+++ b/views/home.html
@@ -3,9 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercado Liebre</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <h1>Estas en la HOME</h1>
+    <header>
+        <div><img src="/images/logo-mercado-liebre.svg" alt="Logo de la empresa"></div>
+        <nav>
+            <div>
+                <form action="#" method="get">
+                    <input type="text" id="busqueda" name="busqueda" placeholder="Buscar productos, marcas"><br>
+                    <button>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                   
+                </form>
+            </div>
+
+            <div class="contenedor">
+                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <h4>Compra en cuotas y sin tarjeta de crédito</h4>
+            </div>
+            
+            <ul>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul><br>
+
+            <ul>
+                <li><a href="#" class="enlace-con-icono">Creá tu cuenta <i class="fa-regular fa-id-card icono-derecha"></i></a></li>
+                <li><a href="#" class="enlace-con-icono">Ingresá <i class="fa-solid fa-right-to-bracket icono-derecha"></i></a></li>
+                <li><a href="#" class="enlace-con-icono">Mis compras <i class="fa-solid fa-basket-shopping icono-derecha"></i></a></li>
+                
+            </ul>
+
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+        </nav>
+        
+    </header>
+
+    <main>
+        <section>
+            <h2>Basado en tu última visita</h2>
+            <article>
+               <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"> 
+               <p class="p-precio">$6.770</p>
+               <p class="p-descuento">40% OFF</p>
+               <p class="p-descripcion">Cafetera Moulinex</p>
+            </article>
+
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                <p class="p-precio">$230.000</p>
+                <p class="p-descuento">20% OFF</p>
+                <p class="p-descripcion">MacBook Pro 2019</p>
+            </article>
+
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10"> 
+                <p class="p-precio">$70.500</p>
+                <p class="p-descuento">10% OFF</p>
+                <p class="p-descripcion">Samsung Galaxy S10</p>
+            </article>
+
+            <article>
+               <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43"> 
+               <p class="p-precio">$23.200</p>
+               <p class="p-descuento">5% OFF</p>
+               <p class="p-descripcion">Smart Tv Samsung 43"</p>
+            </article>
+        </section>
+
+        <section>
+            <h2>Ofertas</h2>
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex"> 
+                <p class="p-precio">$6.770</p>
+                <p class="p-descuento">40% OFF</p>
+                <p class="p-descripcion">Cafetera Moulinex</p>
+            </article>
+ 
+            <article>
+                 <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                 <p class="p-precio">$230.000</p>
+                 <p class="p-descuento">20% OFF</p>
+                 <p class="p-descripcion">MacBook Pro 2019</p>
+            </article>
+ 
+            <article>
+                 <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10"> 
+                 <p class="p-precio">$70.500</p>
+                 <p class="p-descuento">10% OFF</p>
+                 <p class="p-descripcion">Samsung Galaxy S10</p>
+            </article>
+ 
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43"> 
+                <p class="p-precio">$23.200</p>
+                <p class="p-descuento">5% OFF</p>
+                <p class="p-descripcion">Smart Tv Samsung 43"</p>
+            </article>
+        </section>
+
+    </main>
+
+    <footer>
+        <section class="section-footer">
+            <i class="fa-solid fa-credit-card"></i>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </section>
+        <section class="section-footer">
+            <i class="fa-solid fa-gift"></i>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </section>
+        <section class="section-footer">
+            <i class="fa-solid fa-user-shield"></i>
+            <h4>Seguridad de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </section>
+        <section class="footer-copyright">
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        </section>
+
+    </footer>
 </body>
 </html>
