Cambios en html y css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,20 +4,42 @@
     box-sizing: border-box;
 }
 
-header{
+
+/*--------------HEADER----------------*/
+
+.principal{
     background-color: #EAC926;
+    padding-bottom: 30px;
 }
+
+header div.burger-menu {
+    padding-top: 30px;
+    padding-left: 45%;
+    padding-right: 45%;
+}
+
+
+/*img{
+    
+}*/
 
 h2{
     font-size: 24px;
     font-family: 'Roboto';
     color: black;
+    margin-top: 20px;
 }
 
 
 .contenedor {
     display: flex;
-    align-items: center;
+    align-items: center; /* Alineación vertical al centro */
+    text-align: center; /* Alineación del texto al centro */
+    justify-content: center;
+}
+
+.contenedor i {
+    margin-right: 10px; /* Espaciado entre el ícono y el texto */
 }
 
 .contenedor h4{
@@ -42,20 +64,97 @@ a {
     color: black;
     text-decoration: none;
     font-family: 'Roboto';
+    
 }
 
-.burger-menu{
-    width: 40px; /* Ancho del contenedor */
-    height: 40px; /* Altura del contenedor */
-    background-color: blue;
-    border-radius: 5px; /* Bordes redondeados */
+div.burger-menu i{ 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; 
+    align-items: center; 
+    height: 50px;
+    width: 50px;
+    position: relative;
+    background-color: blue;
     color:white;
+    border-radius: 8px;
+}
+
+.barra-busq{
+    padding-left: 20px;
 }
 
 
+
+
+/*-----------------MAIN--------------------*/
+
+main {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/*main section article{
+    background-color: #fff;    
+    margin: 10px 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+main section article img{
+    width: 100%;
+}
+
+main section article i,
+.descuento{
+    color: #39b54a;
+}
+
+main section article i{
+    display: block;
+    font-size: 16px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    left: 20px;
+    bottom: -15px;
+}
+
+article div.main-article{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    border-top: 1px solid #ebebeb;
+    position: relative;
+    padding: 15px;
+}*/
+
+.precio{
+    font-family: 'Roboto';
+    font-size: 18px;
+    width: 100%;
+}
+
+.descuento{
+    font-family: 'Roboto';
+    font-size: 16px;
+    width: 100%;
+}
+
+.descripcion{
+    margin: 20px 0px;
+    font-family: 'Roboto';
+    font-size: 16px;
+    color: #666;
+}
+
+
+
+
+/*---------FOOTER-------------*/
 .section-footer {
     display: flex;
     flex-direction: column;
@@ -90,17 +189,4 @@ a {
     color: #666;
 }
 
-.p-precio{
-    font-family: 'Roboto';
-    font-size: 18px;
-}
 
-.p-descuento{
-    font-family: 'Roboto';
-    font-size: 16px;
-}
-
-.p-descripcion{
-    font-family: 'Roboto';
-    font-size: 16px;
-}
