--- a/views/home.html
+++ b/views/home.html
@@ -13,11 +13,11 @@
 
 <body>
     <header class="principal">
-        <div><img src="/images/logo-mercado-liebre.svg" alt="Logo de la empresa"></div>
+        <div><img src="/images/logo-mercado-liebre.svg" alt="Logo de la empresa" class="logo-ml"></div>
 
         <div class="barra-busq">
             <form action="#" method="get">
-                <input type="text" id="busqueda" name="busqueda" placeholder="Buscar productos, marcas"><br>
+                <input type="text" id="busqueda" name="busqueda" placeholder="Buscar productos, marcas">
                 <button>
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
@@ -52,6 +52,10 @@
 
     </header>
 
+    <div>
+        <img src="/images/img-home-banner.jpg" alt="Banner Home" class="banner-home">
+    </div>
+
     <main>
         <section>
             <header>
@@ -59,8 +63,8 @@
             </header>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <div> 
                     <i class="fas fa-truck"></i>
                     <p class="precio">$6.770</p>
                     <p class="descuento">40% OFF</p>
@@ -69,8 +73,8 @@
             </article>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                <div> 
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$230.000</p>
                     <p class="descuento">20% OFF</p>
@@ -79,8 +83,8 @@
             </article>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+                <div> 
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$70.500</p>
                     <p class="descuento">10% OFF</p>
@@ -89,8 +93,8 @@
             </article>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43"> 
+                <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43">
+                <div> 
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$23.200</p>
                     <p class="descuento">5% OFF</p>
@@ -105,8 +109,8 @@
             </header>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
+                <div> 
                     <a href="#"> <i class="fas fa-truck"></i> </a> 
                     <p class="precio">$6.770</p>
                     <p class="descuento">40% OFF</p>
@@ -115,8 +119,8 @@
             </article>
 
             <article>
-                <div> <!--class="main-article"-->
-                    <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                <img src="/images/img-macbook-pro-2019.jpg" alt="Macbook Pro 2019"> 
+                <div>
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$230.000</p>
                     <p class="descuento">20% OFF</p>
@@ -126,8 +130,8 @@
             </article>
 
             <article>
-                <div><!--class="main-article"-->
-                    <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10">
+                <div>
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$70.500</p>
                     <p class="descuento">10% OFF</p>
@@ -136,8 +140,8 @@
             </article>
 
             <article>
-                <div><!--class="main-article"-->
-                    <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43"> 
+                <img src="/images/img-tv-samsung-smart.jpg" alt="Smart Tv Samsung 43"> 
+                <div>
                     <a href="#"> <i class="fas fa-truck"></i> </a>
                     <p class="precio">$23.200</p>
                     <p class="descuento">5% OFF</p>
